--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "build": "tsc -p .",
-    "test": "echo \"No tests implemented yet\""
+    "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,11 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   }
 }
