fix:an issue related to test

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,6 +8,7 @@ jobs:
 
         env:
             DATABASE_URL: ${{ secrets.DATABASE_URL }}
+            PORT: ${{ secrets.PORT}}
 
         steps:
             - uses: actions/checkout@v4
