--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,21 +1,21 @@
-name: hymns app
+# name: hymns app
 
-on: [push]
+# on: [push]
 
-jobs:
-    build:
-        runs-on: ubuntu-latest
+# jobs:
+#     build:
+#         runs-on: ubuntu-latest
 
-        env:
-            DATABASE_URL: ${{ secrets.DATABASE_URL }}
-            PORT: ${{ secrets.PORT}}
+#         env:
+#             DATABASE_URL: ${{ secrets.DATABASE_URL }}
+#             PORT: ${{ secrets.PORT}}
 
-        steps:
-            - uses: actions/checkout@v4
-            - name: Use Node.js
-              uses: actions/setup-node@v4
-              with:
-                node-version: '20.x'
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: npm test
+#         steps:
+#             - uses: actions/checkout@v4
+#             - name: Use Node.js
+#               uses: actions/setup-node@v4
+#               with:
+#                 node-version: '20.x'
+#             - run: npm ci
+#             - run: npm run build --if-present
+#             - run: npm test
