--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "build": "tsc -p .",
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
   },
   "keywords": [],
   "author": "",
